test/compile_errors/err_recovery_bad_let_value.w
//! expect-error: expected

fn main:
    let x = +
    let y = 10
    print(y)
